Several SEO, accessibility, and best practice updates. Also addressed responsive issues and validation errors.

--- a/assets/styles/common/_browsers.scss
+++ b/assets/styles/common/_browsers.scss
@@ -21,11 +21,14 @@
 			}
 		}
 	}
-	.post-tile .entry-summary {
-		display: none;
-	}
 	.headshot img {
 		border: 1px solid $gray-lighter;
+	}
+}
+
+.ie8 {
+	.post-tile .entry-summary {
+		display: none;
 	}
 }
 
