--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -133,6 +133,11 @@
 	}
 }
 
+#cat-description {
+  padding-top: .5em;
+  padding-bottom: 3em;
+}
+
 .single-post {
 	header {
 		text-align: center;
