--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -78,7 +78,7 @@
 /* Search form */
 #search-form {
 	margin-top: -1px;
-	background-color: #f1f1f1;
+	background-color: $gray-lightest;
 	form {
 		padding: 5px 10px 7px 10px;
 		text-align: left;
