--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -25,16 +25,40 @@
 		}
 	}
 	figure {
-	  height: 150px;
-	  overflow: hidden;
-	}
+    a {
+      display:block;
+      img {
+        width:100%;
+      }
+    }
+  }
 }
 
 .page.search {
-	#search-form form {
+  #search-form-content-area form {
 	  padding: 30px 10px 20px 10px;
 	  margin-bottom: 60px;
 	  width: auto;
 	  text-align: center;
 	}
+}
+#search-form-content-area {
+  background-color: $gray-lightest;
+  .form-control {
+    background: 0 0;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-size: 18pt;
+    border-bottom: 1px solid $gray-lighter;
+  }
+  .input-group-btn {
+    left: 10px;
+    button {
+      text-transform: uppercase;
+      font-size: 11pt;
+      padding: 7px 10px 5px;
+      top: 1px;
+    }
+  }
 }
