--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -149,7 +149,10 @@
 		h2 {
 			font-style: italic;
 		}
-	}
+    .tagline { 
+      text-align: left;
+    }
+  }
 	.entry-meta {
 	  text-transform: uppercase;
 	  font-weight: 600;
